// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verificationCode > render correctly with error as boolean 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_i_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_i_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_i_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_i_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with error as string 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_g_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_g_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_g_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_g_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with helper 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_c_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_c_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_c_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_c_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with label 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: text;
}

.emotion-4 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-4[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-4[data-success='true'] {
  border-color: #22674e;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #792dd4;
}

.emotion-4:hover[aria-invalid='true'],
.emotion-4:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-4:hover[data-success='true'],
.emotion-4:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4:last-child {
  margin-right: 0;
}

.emotion-4::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4::-moz-placeholder {
  color: #727683;
}

.emotion-4:-ms-input-placeholder {
  color: #727683;
}

.emotion-4::placeholder {
  color: #727683;
}

.emotion-4:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <label
        class="emotion-2 emotion-3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        test
      </label>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="0"
          id="_r_e_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="1"
          id="_r_e_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="2"
          id="_r_e_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="3"
          id="_r_e_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with labelDescription 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  cursor: text;
}

.emotion-4 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-4[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-4[data-success='true'] {
  border-color: #22674e;
}

.emotion-4:hover,
.emotion-4:focus {
  border-color: #792dd4;
}

.emotion-4:hover[aria-invalid='true'],
.emotion-4:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-4:hover[data-success='true'],
.emotion-4:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-4:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4:last-child {
  margin-right: 0;
}

.emotion-4::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4::-moz-placeholder {
  color: #727683;
}

.emotion-4:-ms-input-placeholder {
  color: #727683;
}

.emotion-4::placeholder {
  color: #727683;
}

.emotion-4:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
        style="--_4k0ekn0: var(--_4k0ekn0); --_4k0ekn1: var(--_4k0ekn1); --_4k0ekn2: var(--_4k0ekn2); --_4k0ekn3: var(--_4k0ekn3);"
      >
        <label
          class="emotion-2 emotion-3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        >
          test
        </label>
        <span>
          description
        </span>
      </div>
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="0"
          id="_r_n_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="1"
          id="_r_n_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="2"
          id="_r_n_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-4 emotion-5"
          data-success="false"
          data-testid="3"
          id="_r_n_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 0.75rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 1.5rem;
  height: 2rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_b_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_b_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_b_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_b_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as boolean 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="0"
          id="_r_k_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="1"
          id="_r_k_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="2"
          id="_r_k_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="3"
          id="_r_k_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as string 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="0"
          id="_r_l_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="1"
          id="_r_l_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="2"
          id="_r_l_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="true"
          data-testid="3"
          id="_r_l_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_success__m4c9owc style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_16__m4c9ow1s style_undefined_compound_72__m4c9ow3c"
      >
        test
      </p>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_0_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_0_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_0_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_0_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_1_-0"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_1_-1"
          pattern="[0-9]*"
          placeholder="0"
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_1_-2"
          pattern="[0-9]*"
          placeholder="3"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_1_-3"
          pattern="[0-9]*"
          placeholder="7"
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="4"
          id="_r_1_-4"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="5"
          id="_r_1_-5"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle and replace non number with "" when type is number 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_4_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_4_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_4_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_4_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle error 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="true"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_9_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_9_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_9_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="true"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_9_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
      <p
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle keyDown and special key cases and focus/change events 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_2_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_2_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_2_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_2_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste when type is not number 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_7_-0"
          placeholder=""
          type="text"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_7_-1"
          placeholder=""
          type="text"
          value="h"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_7_-2"
          placeholder=""
          type="text"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_7_-3"
          placeholder=""
          type="text"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 4"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="4"
          id="_r_7_-4"
          placeholder=""
          type="text"
          value="a"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 5"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="5"
          id="_r_7_-5"
          placeholder=""
          type="text"
          value="*"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with no overflowing values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_3_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_3_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_3_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_3_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_5_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_5_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_5_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_5_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="4"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle paste with overflowing values at different index than 0 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #727683;
}

.emotion-2::-moz-placeholder {
  color: #727683;
}

.emotion-2:-ms-input-placeholder {
  color: #727683;
}

.emotion-2::placeholder {
  color: #727683;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          id="_r_6_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          id="_r_6_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="1"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          id="_r_6_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="2"
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          id="_r_6_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value="3"
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should render correctly disabled true 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-2 {
  background: #ffffff;
  color: #3f4250;
  font-size: 1rem;
  font-weight: 400;
  text-align: center;
  border-radius: 0.25rem;
  margin-right: 0.5rem;
  width: 2.5rem;
  height: 3rem;
  outline-style: none;
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  border: solid 1px #d9dadd;
}

.emotion-2[aria-invalid='true'] {
  border-color: #b3144d;
}

.emotion-2[data-success='true'] {
  border-color: #22674e;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #792dd4;
}

.emotion-2:hover[aria-invalid='true'],
.emotion-2:focus[aria-invalid='true'] {
  border-color: #92103f;
}

.emotion-2:hover[data-success='true'],
.emotion-2:focus[data-success='true'] {
  border-color: #1b533f;
}

.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:last-child {
  margin-right: 0;
}

.emotion-2::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-2::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-2:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-2::placeholder {
  color: #b5b7bd;
}

.emotion-2:disabled {
  cursor: not-allowed;
  background: #f3f3f4;
  color: #b5b7bd;
  border: solid 1px #e9eaeb;
}

<div
    data-testid="testing"
  >
    <fieldset
      class="emotion-0 emotion-1"
    >
      <div>
        <input
          aria-invalid="false"
          aria-label="Verification code 0"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="0"
          disabled=""
          id="_r_p_-0"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 1"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="1"
          disabled=""
          id="_r_p_-1"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 2"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="2"
          disabled=""
          id="_r_p_-2"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
        <input
          aria-invalid="false"
          aria-label="Verification code 3"
          autocomplete="off"
          class="emotion-2 emotion-3"
          data-success="false"
          data-testid="3"
          disabled=""
          id="_r_p_-3"
          pattern="[0-9]*"
          placeholder=""
          type="tel"
          value=""
        />
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
